Some menu fixes for doc/lispref
* doc/lispref/elisp.texi, doc/lispref/vol1.texi, doc/lispref/vol2.texi:
Some fixes for detailed menu.

* doc/lispref/modes.texi (Major Modes, Auto-Indentation):
* doc/lispref/buffers.texi (Buffers): Some fixes for menu descriptions.

--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,9 @@
+2012-04-26  Glenn Morris  <rgm@gnu.org>
+
+	* elisp.texi, vol1.texi, vol2.texi: Some fixes for detailed menu.
+	* modes.texi (Major Modes, Auto-Indentation):
+	* buffers.texi (Buffers): Some fixes for menu descriptions.
+
 2012-04-26  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* functions.texi (Simple Lambda, Argument List):
