* emacs-lisp/assoc.el: Move to obsolete/.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -144,6 +144,11 @@ server properties.
 
 ** Obsolete packages:
 
+*** assoc.el
+In most cases, assoc+member+push+delq work just as well.
+And in any case it's just a terrible package: ugly semantics, terrible
+inefficiency, and not namespace-clean.
+
 *** mailpost.el
 
 *** mouse-sel.el
