--- a/etc/NEWS
+++ b/etc/NEWS
@@ -657,7 +657,7 @@ by default.
 (Its name is misleading, since it has nothing to do with MIME
 attachments.)  The old name is now an obsolete alias to the new name.
 
-** MH-E has been upgraded to MH-E version 8.3.1.
+** MH-E has been updated to MH-E version 8.3.1.
 See MH-E-NEWS for details.
 
 ** Modula-2 mode provides auto-indentation.
@@ -668,6 +668,9 @@ See MH-E-NEWS for details.
 Completion is now performed via `completion-at-point', bound to C-M-i
 or M-TAB.  If `nxml-bind-meta-tab-to-complete-flag' is non-nil (the
 default), this performs tag completion.
+
+** Org mode has been updated to version 7.8.09.
+See ORG-NEWS for details.
 
 ** Prolog mode has been completely revamped, with lots of additional
 functionality such as more intelligent indentation, electricity,
