--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-27  Chong Yidong  <cyd@gnu.org>
+
+	* subr.el (read-key): Avoid running filter function when setting
+	up temporary tool bar entries (Bug#9922).
+
 2012-04-26  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* vc/vc-git.el (vc-git-state): Fix regexp matching diff output.
