--- a/doc/emacs/custom.texi
+++ b/doc/emacs/custom.texi
@@ -1054,8 +1054,8 @@ pair with a colon and semicolon.  The special variable/value pair
 @findex add-file-local-variable-prop-line
 @findex delete-file-local-variable-prop-line
 @findex copy-dir-locals-to-file-locals-prop-line
-  Instead of adding variable/value pairs by hand, you can use the
-command @kbd{M-x add-file-local-variable-prop-line}.  This prompts for
+  You can use the command @kbd{M-x add-file-local-variable-prop-line}
+instead of adding entries by hand.  It prompts for
 a variable and value, and adds them to the first line in the
 appropriate way.  @kbd{M-x delete-file-local-variable-prop-line}
 prompts for a variable, and deletes its entry from the line.  @kbd{M-x
@@ -1522,7 +1522,7 @@ circumstances.
 @vindex minibuffer-local-completion-map
 @vindex minibuffer-local-must-match-map
 @vindex minibuffer-local-filename-completion-map
-@vindex minibuffer-local-must-match-filename-map
+@vindex minibuffer-local-filename-must-match-map
   The minibuffer has its own set of local keymaps; they contain various
 completion and exit commands.
 
@@ -1539,7 +1539,7 @@ just like @key{RET}.
 for cautious completion.
 @item
 @code{minibuffer-local-filename-completion-map} and
-@code{minibuffer-local-must-match-filename-map} are like the two
+@code{minibuffer-local-filename-must-match-map} are like the two
 previous ones, but they are specifically for file name completion.
 They do not bind @key{SPC}.
 @end itemize
