--- a/doc/lispintro/ChangeLog
+++ b/doc/lispintro/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-28  Glenn Morris  <rgm@gnu.org>
+
+	* emacs-lisp-intro.texi (Syntax): Reword to avoid underfull hbox.
+
 2012-04-07  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in: Replace non-portable use of $< in ordinary rules.
@@ -498,7 +502,7 @@
 ;; coding: utf-8
 ;; End:
 
-  Copyright (C) 2001-2012  Free Software Foundation, Inc.
+  Copyright (C) 2001-2012 Free Software Foundation, Inc.
 
   This file is part of GNU Emacs.
 
