Add some shell indentation test cases. * test/indent/shell.sh: * test/indent/shell.rc: Add some test cases.

--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-28  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* indent/shell.sh:
+	* indent/shell.rc: Ad some test cases.
+
 2012-04-24  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* indent/ruby.rb: New file, to test new syntax-propertize code.
